--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,4 @@ twitter_username: senorrelics
 github_username:  MrRelics
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme : minima
